# git-cmake-format

./: CMakeLists.txt  FindClangFormat.cmake  git-cmake-format.py  git-pre-commit-hook  readme.md
